[project]
name = "quant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tobias Bergkvist", email = "tobias@bergkv.ist" }
]
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.4.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
